[metadata]
name = graph-lsp
description = Extension for jupyterlab-lsp for Graph Languages
long_description = file: ./README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/jupyrdf/graph-lsp/issues
    Source Code = https://github.com/jupyrdf/graph-lsp
author = graph-lsp Contributors
author_email = freeman.dane@gmail.com
license = BSD-3-Clause
keywords =
    Interactive
    Language Server
    LSP
    Graphs
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.6

install_requires =
    entrypoints

[options.entry_points]
jupyter_lsp_spec_v1 =
    stardog-graphql-language-server = graph_lsp.specs:graphql
    sparql-language-server = graph_lsp.specs:sparql
    turtle-language-server = graph_lsp.specs:turtle

[tool:pytest]
junit_family=xunit2
addopts =
    --pyargs jupyter_lsp
    --cov jupyter_lsp
    --cov-report term-missing:skip-covered
    -p no:warnings
    --flake8

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache,.pytest-cache
extend-ignore = E203,W503
max-line-length = 88