# Copyright (c) 2022 Dane Freeman.
# Distributed under the terms of the Modified BSD License.

# we source whatever we can from package.json

[metadata]
long_description = file: ./README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/jupyrdf/graph-lsp/issues
    Source Code = https://github.com/jupyrdf/graph-lsp
author = jupyterlab-graph-lsp Contributors
author_email = freeman.dane@gmail.com
keywords =
    Interactive
    Language Server
    LSP
    Graphs
license_file = LICENSE
classifiers =
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Programming Language :: Python

[options]
include_package_data = True
zip_safe = False
python_requires = >=3.7
install_requires =
    jupyterlab-lsp >=3.10,<4
package_dir =
    = py_src
packages = find:

[options.packages.find]
where =
    py_src

[options.entry_points]
jupyter_lsp_spec_v1 =
    stardog-graphql-language-server = jupyterlab_graph_lsp.specs:graphql
    sparql-language-server = jupyterlab_graph_lsp.specs:sparql
    turtle-language-server = jupyterlab_graph_lsp.specs:turtle

[tool:pytest]
junit_family=xunit2
addopts =
    --pyargs
    jupyterlab_graph_lsp
    --cov jupyterlab_graph_lsp
    --cov-report term-missing:skip-covered
    --cov-report html:build/htmlcov
    --html=build/pytest.html
    --self-contained-html
    --cov-fail-under 100
    -p no:warnings

[flake8]
exclude = .git,__pycache__,envs,.ipynb_checkpoints,.mypy_cache,.pytest-cache
extend-ignore = E203,W503
max-line-length = 88

[isort]
profile = black
multi_line_output = 3
known_first_party = jupyterlab_graph_lsp
